Compilers construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/081_procedure_too_less_args_expect1.xi
f(x:int)

g()
{
    f()
}
//@PRACOWNIA
//@should_not_typecheck
